# total_connect_client packaging file

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name="total_connect_client"
version="2025.2.rc6"
authors = [
  { name="Craig J. Midwinter", email="craig.j.midwinter@gmail.com" },
]
description="Interact with Total Connect 2 alarm systems"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords=["alarm", "TotalConnect"]
dependencies=[
    "pycryptodome>=3.21.0",
    "requests-oauthlib>=2.0.0"
]

[project.urls]
"Homepage" = "https://github.com/craigjmidwinter/total-connect-client"
"Bug Tracker" = "https://github.com/craigjmidwinter/total-connect-client/issues"

[tool.coverage.run]
omit = [
    "total_connect_client/live*.py"
]

[tool.setuptools.package-data]
total_connect_client = ["cache/*.txt"]

[tool.tox]
requires = ["tox>=4.24.1"]
env_list = ["type", "lint", "3.10", "3.11", "3.12", "3.13", ]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
deps = [
    "-r{toxinidir}/requirements.txt",
    "pyjwt>=2.10.1",
    "pytest>=8.3.4",
    "pytest-sugar>=1.0.0",
    "requests_mock>=1.3.0",

]
commands = [["pytest"]]


[tool.tox.env.lint]
deps = ["ruff>=0.9.7", "coverage>=7.6.12",]
ignore_errors = true
commands = [
    ["ruff", "check", "--fix","total_connect_client", "tests"],
    ["coverage", "report", "-m"]
]
[tool.tox.env.type]
description = "run type check on code base"
deps = ["mypy>=1.15.0", "types-requests>=2.23.0", "types-oauthlib>=3.2.0", "types-requests-oauthlib>=2.0.0"]
commands = [
    ["mypy", "-p", "tests"],
]

[tool.ruff]

[tool.ruff.lint]

[tool.coverage]

[tool.mypy]

[[tool.mypy.overrides]]
module = ["pytest", "requests_mock"]
ignore_missing_imports = true