# total_connect_client packaging file

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "total_connect_client"
version = "2025.12.2"
authors = [
  { name = "Craig J. Midwinter", email = "craig.j.midwinter@gmail.com" },
]
description = "Interact with Total Connect 2 alarm systems"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
    "Topic :: Security",
]
keywords = ["alarm", "TotalConnect"]
dependencies = [
    "pycryptodome>=3.23.0",
    "requests-oauthlib>=2.0.0"
]

[project.urls]
"Homepage" = "https://github.com/craigjmidwinter/total-connect-client"
"Bug Tracker" = "https://github.com/craigjmidwinter/total-connect-client/issues"

[dependency-groups]
test = ["pytest>=9.0.2", "pytest-sugar>=1.1.1", "requests_mock>=1.12.1", "pyjwt>=2.10.1"]
type = ["mypy>=1.15.0", "types-requests>=2.23.0", "types-oauthlib>=3.2.0", "types-requests-oauthlib>=2.0.0"]
lint = ["ruff>=0.9.7"]
coverage = ["coverage>=7.6.12", {include-group = "test"}]
dev = [
    "tox>=4.32.0",
    {include-group = "test"},
    {include-group = "type"},
    {include-group = "lint"},
    {include-group = "coverage"}
]

[tool.coverage.run]
branch = true
source = ["total_connect_client"]
omit = [
    "total_connect_client/live*.py",
    "tests/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pytest", "requests_mock"]
ignore_missing_imports = true

[tool.tox]
env_list = ["py{310,311,312,313}", "type", "lint", "coverage"]

[tool.tox.env_run_base]
description = "Run tests under {base_python}"
dependency_groups = ["test"]
allowlist_externals = ["pytest"]
commands = [["pytest", "-xvs"]]

[tool.tox.env.lint]
dependency_groups = ["lint"]
allowlist_externals = ["ruff"]
commands = [
    ["ruff", "check", "total_connect_client", "tests"],
    ["ruff", "format", "--check", "total_connect_client", "tests"],
]

[tool.tox.env.type]
description = "Run type checking on code base"
dependency_groups = ["type"]
allowlist_externals = ["mypy"]
commands = [["mypy", "-p", "total_connect_client"]]

[tool.tox.env.coverage]
description = "Run type checking on code base"
dependency_groups = ["coverage"]
allowlist_externals = ["coverage"]
commands = [
    ["coverage", "run", "-m", "pytest"],
    ["coverage", "report"],
]
